tarmac/shared-services-iac/terraform/modules/istio/templates/istio_addon.yml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: istio-sidecar
spec:
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
